Task Completed Tested in Chrome and FF

--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -340,9 +340,9 @@
             </section>
             <hr>
             <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-10">
+              <div class="col-sm-offset-2 col-sm-10 last-btns">
                 <a ui-sref="^" ng-disabled="_loading" class="btn btn-default">
-                  <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
+                  <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel 
                 </a>
                 <button type="submit" class="btn btn-success" ng-disabled="_loading || _disabled || !editForm.$valid" value="Update Company Profile">
                   <i class="glyphicon glyphicon-save"></i> Update Company Profile
