--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -50,6 +50,7 @@
             Loading...
           </div>
           <crud-pagination></crud-pagination>
+          <div class="table_wrepper">
           <table class="table users-list">
             <thead>
             <tr>
@@ -122,6 +123,7 @@
             </tr>
             </tbody>
           </table>
+          </div>
           <hr>
           <crud-pagination></crud-pagination>
         </div>
