--- a/code/dev/parts/reports/mobile-ab.html
+++ b/code/dev/parts/reports/mobile-ab.html
@@ -26,7 +26,7 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-fbt-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -41,7 +41,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-fbt-distribution-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -58,7 +58,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-errors-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -73,7 +73,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-speed-chart
                    ng-account="account"
                    ng-app="application.app_id"
