--- a/code/dev/parts/reports/mobile-top-objects.html
+++ b/code/dev/parts/reports/mobile-top-objects.html
@@ -27,7 +27,7 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -43,7 +43,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-time
                    ng-account="account"
                    ng-app="application.app_id"
@@ -60,7 +60,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-time
                    ng-account="account"
                    ng-app="application.app_id"
@@ -77,7 +77,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -94,7 +94,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -111,7 +111,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -128,7 +128,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-5xx
                    ng-account="account"
                    ng-app="application.app_id"
