--- a/code/dev/parts/reports/mobile-traffic.html
+++ b/code/dev/parts/reports/mobile-traffic.html
@@ -26,7 +26,7 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-rps-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -41,7 +41,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-bw-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -55,8 +55,8 @@
           </div>
           <hr>
 
-          <div class="row">
-            <div class="col-lg-12">
+          <div class="row"> 
+            <div class="col-lg-12 rps-graph">
               <div mobile-http-codes-chart
                    ng-account="account"
                    ng-app="application.app_id"
