--- a/code/dev/parts/reports/top/top-cache-miss.html
+++ b/code/dev/parts/reports/top/top-cache-miss.html
@@ -5,7 +5,7 @@
      fl-country="flCountry"
      fl-device="flDevice"
      ng-filters="filters"
-     on-filter="loadDetails()"></div>
+     on-filter="loadDetails()" class="margin-bottom"></div>
 <div class="alert alert-info" ng-if="!_loading && !data.labels.length">
   No data to display
 </div>
