Create new a directive 'time-note-display'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -153,6 +153,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/menu-toggle.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/ng-animate-disabled.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/directives/time-note-display.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/typeahead.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/focus-me.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.constants.js"></script>
