--- a/code/dev/parts/reports/top-reports.html
+++ b/code/dev/parts/reports/top-reports.html
@@ -19,6 +19,7 @@
                          ng-model="domain"
                          on-select="onDomainSelected()"
                          select-one="true"></div>
+                    <time-note-display></time-note-display>
                   </div>
 
                 </form>
