--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -14,6 +14,7 @@
                                 <form class="form-inline">
                                     <div class="form-group">
                                         <div domain-select ng-model="vm.model.domain" on-select="vm.actions.onDomainChange()" select-one="true"></div>
+                                        <time-note-display></time-note-display>
                                     </div>
                                     <div class="form-group" ng-if="vm.model.domain">
                                         <filter-generator domain="vm.model.domain" ng-model="vm.model.filtersList"></filter-generator>
