--- a/code/dev/parts/reports/mobile-top-objects.html
+++ b/code/dev/parts/reports/mobile-top-objects.html
@@ -16,6 +16,7 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <div app-select ng-model="application" on-select="reloadDirs()"></div>
+                    <time-note-display></time-note-display>
                   </div>
 
                 </form>
