--- a/code/dev/parts/reports/top.html
+++ b/code/dev/parts/reports/top.html
@@ -15,6 +15,7 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <div domain-select ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
+                    <time-note-display></time-note-display>
                   </div>
                 </form>
               </div>
