--- a/code/dev/parts/dashboard/dashboard-title.tpl.html
+++ b/code/dev/parts/dashboard/dashboard-title.tpl.html
@@ -13,8 +13,8 @@
           <option value="30">Every 30 Minutes</option>
           <option value="">No Auto-Refresh</option>
         </select>
-        <button class="btn btn-info " ng-click="model.refreshNow= true">
-          <i class="glyphicon glyphicon-refresh"></i> Refresh Now
+        <button class="btn btn-info " ng-disabled="model.refreshNow" ng-click="model.refreshNow= true">
+          <i class="glyphicon glyphicon-refresh" ng-class="model.refreshNow ?'spin':''"></i> Refresh Now
         </button>
       </div>
     </span>
@@ -34,13 +34,9 @@
     </span>
     </h2>
   </div>
-
-<div class="col-md-12" ng-if="(model.getCountDashboardWidget(model.rows)==0)">
-  <strong class="alert alert-attention"> Click on <i class="glyphicon glyphicon-edit"></i> icon in the top right corner to add graphs to the dashboard.</strong>
-  <hr>
-  <div class="dashboard-preview-background">
-
+  <div class="col-md-12" ng-if="(model.getCountDashboardWidget(model.rows)==0)">
+    <strong class="alert alert-attention"> Click on <i class="glyphicon glyphicon-edit"></i> icon in the top right corner to add graphs to the dashboard.</strong>
+    <hr>
+    <div class="dashboard-preview-background">
+    </div>
   </div>
-</div>
-
-
