Add a note that the displayed time is local to the computer for mobile and web analytics

--- a/code/dev/parts/reports/mobile-ab.html
+++ b/code/dev/parts/reports/mobile-ab.html
@@ -16,6 +16,8 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <div app-select ng-model="application" on-select="reloadDirs()"></div>
+                  </div>
+                  <div class="form-group">
                     <time-note-display></time-note-display>
                   </div>
                 </form>
