--- a/code/dev/parts/reports/lm-rtt-heatmaps.html
+++ b/code/dev/parts/reports/lm-rtt-heatmaps.html
@@ -15,6 +15,8 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <div domain-select ng-model="domain" on-select="onDomainSelect()" select-one="true"></div>
+                  </div>
+                  <div class="form-group">
                     <time-note-display></time-note-display>
                   </div>
                 </form>
