--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -23,6 +23,8 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <div domain-select ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
+                  </div>
+                  <div class="form-group">
                     <time-note-display></time-note-display>
                   </div>
                 </form>
