--- a/code/dev/parts/reports/top-reports.html
+++ b/code/dev/parts/reports/top-reports.html
@@ -19,9 +19,10 @@
                          ng-model="domain"
                          on-select="onDomainSelected()"
                          select-one="true"></div>
+                  </div>
+                  <div class="form-group">
                     <time-note-display></time-note-display>
                   </div>
-
                 </form>
 
               </div>
