--- a/code/dev/parts/reports/filters/mobile-top-objects-filters.html
+++ b/code/dev/parts/reports/filters/mobile-top-objects-filters.html
@@ -1,7 +1,7 @@
 
   <form class="form-inline">
-    <div class="form-group">
-      <select class="form-control fixed"
+    <div class="form-group margin-bottom">
+      <select class="form-control fixed "
               ng-model="span">
         <option value="1">Last 1 Hour</option>
         <option value="12">Last 12 Hours</option>
@@ -9,7 +9,7 @@
       </select>
     </div>
 
-    <div class="form-group">
+    <div class="form-group margin-bottom">
       <select class="form-control fixed"
               ng-model="ngFilters.country"
               ng-options="key as item for (key, item) in flCountries">
@@ -17,7 +17,7 @@
       </select>
     </div>
 
-    <div class="form-group">
+    <div class="form-group margin-bottom">
       <select class="form-control fixed"
               ng-model="ngFilters.os"
               ng-options="item for item in flOses">
@@ -25,7 +25,7 @@
       </select>
     </div>
 
-    <div class="form-group">
+    <div class="form-group margin-bottom">
       <select class="form-control fixed"
               ng-model="ngFilters.device"
               ng-options="item for item in flDevices">
@@ -33,7 +33,7 @@
       </select>
     </div>
 
-    <div class="form-group">
+    <div class="form-group margin-bottom">
       <select class="form-control fixed"
               ng-model="ngFilters.operator"
               ng-options="item for item in flOperators">
@@ -41,7 +41,7 @@
       </select>
     </div>
 
-    <div class="form-group">
+    <div class="form-group margin-bottom">
       <select class="form-control fixed"
               ng-model="ngFilters.network"
               ng-options="item for item in flNetworks">
@@ -49,7 +49,7 @@
       </select>
     </div>
 
-    <div class="form-group">
+    <div class="form-group margin-bottom">
       <select class="form-control fixed"
               ng-model="count">
         <option value="5">Top 5 Records</option>
@@ -61,7 +61,7 @@
       </select>
     </div>
 
-    <div class="form-group">
+    <div class="form-group margin-bottom">
       <button class="btn btn-info" ng-click="update()" ng-disabled="flDisabled">
         <i class="glyphicon glyphicon-refresh"></i>&nbsp;Update Report
       </button>
