--- a/code/dev/parts/reports/filters/time-period.html
+++ b/code/dev/parts/reports/filters/time-period.html
@@ -1,7 +1,7 @@
 <div class="row filter-time-period ng-show="flOs && flCountry && flDevice">
   <div class="col-md-12">
     <form class="form-inline">
-      <div class="form-group">
+      <div class="form-group margin-bottom">
         <select class="form-control fixed"
                 ng-model="delay">
           <option value="1">Last 1 Day</option>
@@ -10,7 +10,7 @@
         </select>
       </div>
 
-      <div class="form-group">
+      <div class="form-group margin-bottom">
         <select class="form-control fixed"
                 ng-model="ngFilters.country"
                 ng-options="key as item for (key, item) in flCountry">
@@ -18,7 +18,7 @@
         </select>
       </div>
 
-      <div class="form-group">
+      <div class="form-group margin-bottom">
         <select class="form-control fixed"
                 ng-model="ngFilters.os"
                 ng-options="item for item in flOs">
@@ -26,7 +26,7 @@
         </select>
       </div>
 
-      <div class="form-group">
+      <div class="form-group margin-bottom">
         <select class="form-control fixed"
                 ng-model="ngFilters.device"
                 ng-options="item for item in flDevice">
@@ -34,7 +34,7 @@
         </select>
       </div>
 
-      <div class="form-group">
+      <div class="form-group margin-bottom">
         <button class="btn btn-info" ng-click="updateFilters()">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
           Update Report
