--- a/code/dev/parts/reports/mobile-ab.html
+++ b/code/dev/parts/reports/mobile-ab.html
@@ -17,9 +17,6 @@
                   <div class="form-group">
                     <div app-select ng-model="application" on-select="reloadDirs()"></div>
                   </div>
-                  <div class="form-group">
-                    <time-note-display></time-note-display>
-                  </div>
                 </form>
 
               </div>
@@ -29,7 +26,7 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-fbt-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -44,7 +41,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-fbt-distribution-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -61,7 +58,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-errors-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -76,7 +73,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-speed-chart
                    ng-account="account"
                    ng-app="application.app_id"
