--- a/code/dev/parts/reports/mobile-top-objects.html
+++ b/code/dev/parts/reports/mobile-top-objects.html
@@ -17,9 +17,7 @@
                   <div class="form-group">
                     <div app-select ng-model="application" on-select="reloadDirs()"></div>
                   </div>
-                  <div class="form-group">
-                    <time-note-display></time-note-display>
-                  </div>
+
                 </form>
 
               </div>
@@ -29,7 +27,7 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -45,7 +43,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-time
                    ng-account="account"
                    ng-app="application.app_id"
@@ -62,7 +60,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-time
                    ng-account="account"
                    ng-app="application.app_id"
@@ -79,7 +77,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -96,7 +94,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -113,7 +111,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -130,7 +128,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-5xx
                    ng-account="account"
                    ng-app="application.app_id"
