--- a/code/dev/parts/reports/mobile-traffic.html
+++ b/code/dev/parts/reports/mobile-traffic.html
@@ -17,9 +17,6 @@
                   <div class="form-group">
                     <div app-select ng-model="application" on-select="reloadDirs()"></div>
                   </div>
-                  <div class="form-group">
-                    <time-note-display></time-note-display>
-                  </div>
                 </form>
 
               </div>
@@ -29,7 +26,7 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-rps-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -44,7 +41,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-bw-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -58,8 +55,8 @@
           </div>
           <hr>
 
-          <div class="row">
-            <div class="col-lg-12">
+          <div class="row"> 
+            <div class="col-lg-12 rps-graph">
               <div mobile-http-codes-chart
                    ng-account="account"
                    ng-app="application.app_id"
