--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -60,7 +60,7 @@
             <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here accounts the user should be associated with">Account *</label>
             <div class="col-sm-10">
               <!-- For "admin" and "user" select only one account-->
-              <span ng-show="!_loading && companies.length==0" class="reloader--" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
+              <span ng-show="!_loading && companies.length==0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
               <ui-select ng-if="!_loading && companies.length>0 && model.role !='reseller' &&!!model.companyId" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.companyId[0]" id="company" name="accountId" on-select="onOneAccountSelect($model)">
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
