--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -158,6 +158,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/directives/time-note-display.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/typeahead.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/focus-me.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/directives/confirm-on-exit.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.constants.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.service.js"></script>
