implement re-ordering for allowed transport protocols UI items with 'Sortable' module

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -122,6 +122,7 @@
 <script type="text/javascript" src="../bower_components/AngularJS-Toaster/toaster.min.js"></script>
 <script type="text/javascript" src="../bower_components/jquery.nicescroll/jquery.nicescroll.min.js"></script>
 <script type="text/javascript" src="../bower_components/angular-nicescroll/angular-nicescroll.js"></script>
+<script type="text/javascript" src="../bower_components/Sortable/ng-sortable.js"></script>
 
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
