Fixing text in empty SSL certs list

--- a/code/dev/parts/ssl_certs/list.html
+++ b/code/dev/parts/ssl_certs/list.html
@@ -72,7 +72,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently you don't have any SSL certificates registered in the system. You can click on "Add SSL Certificate" button above to add an SSL certificate.
+            Currently you don't have any SSL certificates registered in the system. You can click on "Add New SSL Certificate" button above to add an SSL certificate.
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
