--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="../bower_components/select2-bootstrap-css/select2-bootstrap.css">
   <link rel="stylesheet" href="../bower_components/highlightjs/styles/github.css">
   <link rel="stylesheet" href="../bower_components/AngularJS-Toaster/toaster.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../bower_components/sweetalert/dist/sweetalert.css">
+
   <!-- endbuild -->
 
   <link rel="stylesheet" href="css/styles.css">
@@ -124,6 +126,9 @@
 <script type="text/javascript" src="../bower_components/angular-nicescroll/angular-nicescroll.js"></script>
 
 <script type="text/javascript" src="../bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+<script type="text/javascript" src="../bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+
+<script type="text/javascript" src="../bower_components/sweetalert/dist/sweetalert.min.js"></script>
 
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
