links added to constant file for good bye page

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -232,6 +232,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/profile/controller/companyProfileEdit.controller.js"></script>
 <script type="text/javascript" src="js/portal/profile/controller/billing.controller.js"></script>
 <script type="text/javascript" src="js/portal/profile/controller/statements.controller.js"></script>
+<script type="text/javascript" src="js/portal/profile/controller/goodBye.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/users/users.module.js"></script>
 <script type="text/javascript" src="js/portal/users/users.routes.js"></script>
