Polishing previous commit

--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -132,7 +132,7 @@
           </div>
         <!-- #begin allowed-transport-protocols -->
           <div class="form-group">
-            <label for="allowed_transport_protocols" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Rev SDK allowed last mile transport protocols">Allowed Transport Protocols</label>
+            <label for="allowed_transport_protocols" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Rev SDK allowed last mile transport protocols">Allowed Transport Protocols And Selection Priority</label>
             <!-- Use directive ng-sortable -->
             <div class="col-sm-3" id="allowed-transport-protocols" ng-sortable="protocolOrder">
               <div ng-repeat="protocol in protocols" class="protocolbox">
