Issue Fixed Please check

--- a/code/dev/parts/reports/mobile-top-objects.html
+++ b/code/dev/parts/reports/mobile-top-objects.html
@@ -29,7 +29,7 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -45,7 +45,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-time
                    ng-account="account"
                    ng-app="application.app_id"
@@ -62,7 +62,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-time
                    ng-account="account"
                    ng-app="application.app_id"
@@ -79,7 +79,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -96,7 +96,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -113,7 +113,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects
                    ng-account="account"
                    ng-app="application.app_id"
@@ -130,7 +130,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-top-objects-5xx
                    ng-account="account"
                    ng-app="application.app_id"
