--- a/code/dev/parts/reports/mobile-ab.html
+++ b/code/dev/parts/reports/mobile-ab.html
@@ -29,7 +29,7 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-fbt-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -44,7 +44,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-fbt-distribution-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -61,7 +61,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-errors-chart
                    ng-account="account"
                    ng-app="application.app_id"
@@ -76,7 +76,7 @@
           <hr>
 
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 rps-graph">
               <div mobile-ab-speed-chart
                    ng-account="account"
                    ng-app="application.app_id"
