Change the traffic graph to refresh without folding down and unfolding back

--- a/code/dev/parts/reports/charts/fbt-heatmap.html
+++ b/code/dev/parts/reports/charts/fbt-heatmap.html
@@ -24,10 +24,10 @@
 
 </div>
 
-<div class="alert alert-info" ng-if="_loading">
+<!-- <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
   Loading
-</div>
+</div> -->
 
 <div id="canvas-svg" style="position: relative;"></div>
 
