--- a/code/dev/parts/reports/charts/mobile-top-objects-5xx.html
+++ b/code/dev/parts/reports/charts/mobile-top-objects-5xx.html
@@ -16,10 +16,10 @@
   </div>
 </div>
 
-<div class="alert alert-info" ng-if="_loading">
+<!-- <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
   Loading
-</div>
+</div> -->
 
 <div ng-if="!_loading">
   <div class="alert alert-info" ng-if="!items.length">
