--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -33,11 +33,11 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="col-sm-12 nd-block">
-                                <h3>Edge Cache Hit/Miss Ratio</h3>
-                                <div class="alert alert-info" ng-if="!cacheStatus || !cacheStatus.length">
+                                <h3>Edge Cache Hit/Miss Ratio!!</h3>
+                               <!--  <div class="alert alert-info" ng-if="!cacheStatus || !cacheStatus.length">
                                     No data to display
-                                </div>
-                                <div ng-hide="!cacheStatus || !cacheStatus.length">
+                                </div> -->
+                                <div><!--  ng-hide="!cacheStatus || !cacheStatus.length"> -->
                                     <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="cacheStatus"></div>
                                 </div>
                             </div>
