--- a/code/dev/parts/reports/heatmaps.html
+++ b/code/dev/parts/reports/heatmaps.html
@@ -49,10 +49,10 @@
         </div>
         <div class="panel-body">
 
-          <div class="alert alert-info" ng-if="_loading">
+          <!-- <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
             Loading...
-          </div>
+          </div> -->
 
           <div id="canvas-svg-hits" style="position: relative;"></div>
 
@@ -64,10 +64,10 @@
         </div>
         <div class="panel-body">
 
-          <div class="alert alert-info" ng-if="_loading">
+          <!-- <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
             Loading...
-          </div>
+          </div> -->
 
           <div id="canvas-svg-gbt" style="position: relative;"></div>
 
