--- a/code/dev/parts/reports/top/top-5xx.html
+++ b/code/dev/parts/reports/top/top-5xx.html
@@ -1,7 +1,6 @@
-
 <h3>Top Objects With 5XX Error Codes</h3>
 <div filter-top-objects
-     ng-hide="!ngDomain"
+     ng-disabled="!ngDomain"
      fl-os="flOs"
      fl-country="flCountry"
      fl-device="flDevice"
