--- a/code/dev/parts/reports/charts/fbt-distribution.html
+++ b/code/dev/parts/reports/charts/fbt-distribution.html
@@ -48,14 +48,14 @@
 
 </div>
 
-<div class="alert alert-info" ng-if="!_loading && (!ngDomain || !traffic.labels.length)">
+<!-- <div class="alert alert-info" ng-if="!_loading && (!ngDomain || !traffic.labels.length)">
   No data to display
 </div>
 <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
   Loading
-</div>
-<div ng-hide="!traffic.labels || !traffic.labels.length">
+</div> -->
+<div><!--  ng-hide="!traffic.labels || !traffic.labels.length"> -->
 
   <div style="min-width: 500px; min-height: 350px" line-chart ng-data="traffic" ng-chart-options="chartOptions"></div>
 </div>
