--- a/code/dev/parts/reports/lm-rtt-heatmaps.html
+++ b/code/dev/parts/reports/lm-rtt-heatmaps.html
@@ -44,10 +44,10 @@
         </div>
         <div class="panel-body">
 
-          <div class="alert alert-info" ng-if="_loading">
+        <!--   <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
             Loading...
-          </div>
+          </div> -->
 
           <div id="canvas-svg" style="position: relative;"></div>
 
