--- a/code/dev/parts/reports/mobile-distributions.html
+++ b/code/dev/parts/reports/mobile-distributions.html
@@ -56,25 +56,25 @@
             <div class="col-md-6">
               <h3>Origin/RevAPM Traffic Distribution By Requests</h3>
 
-              <div class="alert alert-info" ng-hide="_loading || destination_hits.length">
+              <!-- <div class="alert alert-info" ng-hide="_loading || destination_hits.length">
                 No data to display
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
-              </div>
-              <div ng-hide="_loading || !destination_hits.length">
+              </div> -->
+              <div><!--  ng-hide="_loading || !destination_hits.length"> -->
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="destination_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
               <h3>Origin/RevAPM Traffic Distribution By Traffic</h3>
-              <div class="alert alert-info" ng-hide="_loading || destination_gbt.length">
+             <!--  <div class="alert alert-info" ng-hide="_loading || destination_gbt.length">
                 No data to display
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
-              </div>
-              <div ng-hide="_loading || !destination_gbt.length">
+              </div> -->
+              <div><!--  ng-hide="_loading || !destination_gbt.length"> -->
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="destination_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
             </div>
@@ -84,25 +84,25 @@
           <div class="row">
             <div class="col-md-6">
               <h3>RevAPM Transport Protocol Distribution By Requests</h3>
-              <div class="alert alert-info" ng-hide="_loading || transport_hits.length">
+             <!--  <div class="alert alert-info" ng-hide="_loading || transport_hits.length">
                 No data to display
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
-              </div>
-              <div ng-hide="_loading || !transport_hits.length">
+              </div> -->
+              <div><!--  ng-hide="_loading || !transport_hits.length"> -->
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="transport_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
               <h3>RevAPM Transport Protocol Distribution By Traffic</h3>
-              <div class="alert alert-info" ng-hide="_loading || transport_gbt.length">
+             <!--  <div class="alert alert-info" ng-hide="_loading || transport_gbt.length">
                 No data to display
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
-              </div>
-              <div ng-hide="_loading || !transport_gbt.length">
+              </div> -->
+              <div><!--  ng-hide="_loading || !transport_gbt.length"> -->
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="transport_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
             </div>
@@ -112,25 +112,25 @@
           <div class="row">
             <div class="col-md-6">
               <h3>Request Completion Status Distribution By Requests</h3>
-              <div class="alert alert-info" ng-hide="_loading || status_hits.length">
+             <!--  <div class="alert alert-info" ng-hide="_loading || status_hits.length">
                 No data to display
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
-              </div>
-              <div ng-hide="_loading || !status_hits.length">
+              </div> -->
+              <div><!--  ng-hide="_loading || !status_hits.length"> -->
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="status_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
               <h3>Request Completion Status Distribution By Traffic</h3>
-              <div class="alert alert-info" ng-hide="_loading || status_gbt.length">
+             <!--  <div class="alert alert-info" ng-hide="_loading || status_gbt.length">
                 No data to display
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
-              </div>
-              <div ng-hide="_loading || !status_gbt.length">
+              </div> -->
+              <div><!--  ng-hide="_loading || !status_gbt.length"> -->
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="status_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
             </div>
@@ -140,25 +140,25 @@
           <div class="row">
             <div class="col-md-6">
               <h3>Edge Cache Hit Ratio By Requests</h3>
-              <div class="alert alert-info" ng-hide="_loading || cache_hits.length">
+              <!-- <div class="alert alert-info" ng-hide="_loading || cache_hits.length">
                 No data to display
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
-              </div>
-              <div ng-hide="_loading || !cache_hits.length">
+              </div> -->
+              <div><!--  ng-hide="_loading || !cache_hits.length"> -->
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="cache_hits" ng-chart-options="hitsChartOpts"></div>
               </div>
             </div>
             <div class="col-md-6">
               <h3>Edge Cache Hit Ratio By Traffic</h3>
-              <div class="alert alert-info" ng-hide="_loading || cache_gbt.length">
+              <!-- <div class="alert alert-info" ng-hide="_loading || cache_gbt.length">
                 No data to display
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
-              </div>
-              <div ng-hide="_loading || !cache_gbt.length">
+              </div> -->
+              <div><!--  ng-hide="_loading || !cache_gbt.length"> -->
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="cache_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
             </div>
