--- a/code/dev/parts/reports/top/top-requests.html
+++ b/code/dev/parts/reports/top/top-requests.html
@@ -1,6 +1,6 @@
 <h3>Top Most Requested Objects</h3>
 <div filter-top-objects
-     ng-hide="!ngDomain"
+     ng-disabled="!ngDomain"
      fl-os="flOs"
      fl-country="flCountry"
      fl-device="flDevice"
