--- a/code/dev/parts/dashboard/widgets/top-reports/view-request-success-fialure-ratio.tpl.html
+++ b/code/dev/parts/dashboard/widgets/top-reports/view-request-success-fialure-ratio.tpl.html
@@ -3,10 +3,10 @@
   <div class="alert alert-info" ng-if="!config.domain">
     Please click on <i class="glyphicon glyphicon-cog"></i> icon to configure the widget
   </div>
-  <div class="alert alert-info" ng-if="config.domain&&(!requestStatus || !requestStatus.length)">
+ <!--  <div class="alert alert-info" ng-if="config.domain&&(!requestStatus || !requestStatus.length)">
     No data to display
-  </div>
-  <div ng-if="requestStatus || requestStatus.length">
+  </div> -->
+  <div ng-if="config.domain"><!--  ng-if="requestStatus || requestStatus.length"> -->
     <div pie-chart ng-data="requestStatus"></div>
   </div>
 </div>
