Fix width for graph Traffic Level

--- a/code/dev/parts/reports/charts/mobile-base-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-base-traffic.html
@@ -28,7 +28,7 @@
   </div> -->
 
   <div><!--  ng-class="{'invisible-chart-wrapper': hits.labels && _loading, 'hide': !_loading &&(!hits.labels || !hits.labels.length) }"> -->
-    <div ngif="!_loading" style="width: 500px; height: 350px" line-chart ng-data="hits" ng-chart-options="chartOptions"></div>
+    <div ngif="!_loading" style="min-width: 500px; min-height: 350px" line-chart ng-data="hits" ng-chart-options="chartOptions"></div>
   </div>
 </div>
 
