Add new Dashboar widget "HTTP Status Codes Graph"

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -357,11 +357,17 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-nav-menu.component.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-new.component.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-delete.conmponent.js"></script>
-
+<!-- Web Analytic -->
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/widgetsWebAnalytics.module.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/widgetsWebAnalyticsEditConfig.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-graph/widgetHTTPStatusCodeLineGraph.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-graph/widgetHTTPStatusCodeLineGraph.config.js"></script>
+<!-- //Web Analytic -->
 <!-- BlueTriangleTech -->
 <script type="text/javascript" src="js/portal/bluetriangletech/bluetriangletech.module.js"></script>
 <script type="text/javascript" src="js/portal/bluetriangletech/bluetriangletech.values.js"></script>
 <script type="text/javascript" src="js/portal/bluetriangletech/services/BTTPortal.service.js"></script><!-- //BlueTriangleTech-->
+
 <!-- LogShippers -->
 <script type="text/javascript" src="js/portal/logshippers/logshippers.module.js"></script>
 <script type="text/javascript" src="js/portal/logshippers/logshippers.routes.js"></script>
