Save new widget "Average FBT"

--- a/code/dev/parts/reports/charts/fbt-average.html
+++ b/code/dev/parts/reports/charts/fbt-average.html
@@ -1,5 +1,5 @@
 <h3 style="margin-top: 0;">Average FBT</h3>
-<div class="clearfix" style="margin-bottom: 8px;">
+<div class="clearfix" style="margin-bottom: 8px;" ng-show="flOs && flCountry && flDevice">
   <div class="pull-right">
 
     <form class="form-inline">
