--- a/code/dev/parts/dashboard/widgets/web-analytics/widget-title-with-params-hours.tpl.html
+++ b/code/dev/parts/dashboard/widgets/web-analytics/widget-title-with-params-hours.tpl.html
@@ -23,7 +23,7 @@
        </span>
 </h3>
 <small ng-if="definition.config.filters.delay" >
-  Last {{definition.config.filters.delay}} <span ng-if="definition.config.filters.delay==1">Hour</span> <span ng-if="definition.config.filters.delay!==1">Hours</span>
+  Last {{definition.config.filters.delay}} <span ng-if="definition.config.filters.delay=='1'">Hour</span> <span ng-if="definition.config.filters.delay!=='1'">Hours</span>
 </small>
 <span class="widget_filters_info" ng-show="!!definition.config.filters[index.key]" ng-repeat="index in [{key:'os',title:'OS'},{key:'country',title:'Сountry'},{key:'device',title:'Device'}]">
   <small ng-if="!!definition.config.filters[index.key]&& definition.config.filters[index.key]!=='-'">&nbsp;{{index.title}}: {{definition.config.filters[index.key]}}&nbsp;</small>
